--- a/package.json
+++ b/package.json
@@ -7,5 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Pratik Bade",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "dotenv": "^16.3.1",
+    "expre": "^0.1.1",
+    "express": "^4.18.2",
+    "mongoose": "^8.0.3"
+  }
 }
