--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "To learn backend with industry project ",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Pratik Bade",
@@ -13,5 +14,9 @@
     "expre": "^0.1.1",
     "express": "^4.18.2",
     "mongoose": "^8.0.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2",
+    "prettier": "^3.1.1"
   }
 }
