--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "author": "Pratik Bade",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-
     "express": "^4.18.2",
     "mongoose": "^8.0.3"
   },
